ARROW-7390: [C++][Dataset] Fix RecordBatchProjector race

The RecordBatchProjector is shared accross ScanTasks of the same Fragment. The resize operation of missing columns is not thread safe. This change ensure that each ScanTask gets his own projector. The copy should not be costly since it's copying empty vectors and one shared pointer.

Closes #6661 from fsaintjacques/ARROW-7390-fix-project-concurrency

Authored-by: François Saint-Jacques <fsaintjacques@gmail.com>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>